src/tests/fixtures/custom_scalars/SpecifiedByMissingUrlinvalid.invalid.ts.expected
-----------------
INPUT
----------------- 
/**
 * @gqlScalar
 * @gqlAnnotate specifiedBy
 */
export type UUID = string;

-----------------
OUTPUT
-----------------
src/tests/fixtures/custom_scalars/SpecifiedByMissingUrlinvalid.invalid.ts:3:4 - error: Directive "@specifiedBy" argument "url" of type "String!" is required, but it was not provided.

3  * @gqlAnnotate specifiedBy
     ~~~~~~~~~~~~~~~~~~~~~~~~
4  */
  ~
